pokedex gen i and gen ii

--- a/info-johto/index.html
+++ b/info-johto/index.html
@@ -49,9 +49,310 @@
       </div>
      
 
-      <section id="locations"></section>
+      <!-- <section id="locations"></section> -->
 
-      <!-- <section id="map"></section>    -->
+      <section id="map">
+        
+        <!-- /* A */ -->
+        <div>
+          <div class="a-1"><span id="A-1"></span></div>
+          <div class="a-2"><span id="A-2"></span></div>
+          <div class="a-3"><span id="A-3"></span></div>
+          <div class="a-4"><span id="A-4"></span></div>
+          <div class="a-5"><span id="A-5"></span></div>
+          <div class="a-6"><span id="A-6"></span></div>
+          <div class="a-7"><span id="A-7"></span></div>
+          <div class="a-8"><span id="A-8"></span></div>
+          <div class="a-9"><span id="A-9"></span></div>
+          <div class="a-10"><span id="A-10"></span></div>
+          <div class="a-11"><span id="A-11"></span></div>
+          <div class="a-12"><span id="A-12"></span></div>
+          <div class="a-13"><span id="A-13"></span></div>
+          <div class="a-14"><span id="A-14"></span></div>
+          <div class="a-15 lake-of-rage-area"><span id="A-15"></span></div>
+          <div class="a-16"><span id="A-16"></span></div>
+          <div class="a-17"><span id="A-17"></span></div>
+          <div class="a-18"><span id="A-18"></span></div>
+          <div class="a-19"><span id="A-19"></span></div>
+          <div class="a-20"><span id="A-20"></span></div>
+        </div>
+          <!-- /* B */ -->
+        <div>
+          <div class="b-1"><span id="B-1"></span></div>
+          <div class="b-2"><span id="B-2"></span></div>
+          <div class="b-3"><span id="B-3"></span></div>
+          <div class="b-4"><span id="B-4"></span></div>
+          <div class="b-5"><span id="B-5"></span></div>
+          <div class="b-6"><span id="B-6"></span></div>
+          <div class="b-7"><span id="B-7"></span></div>
+          <div class="b-8"><span id="B-8"></span></div>
+          <div class="b-9"><span id="B-9"></span></div>
+          <div class="b-10"><span id="B-10"></span></div>
+          <div class="b-11"><span id="B-11"></span></div>
+          <div class="b-12"><span id="B-12"></span></div>
+          <div class="b-13"><span id="B-13"></span></div>
+          <div class="b-14"><span id="B-14"></span></div>
+          <div class="b-15 johto-route-43-area"><span id="B-15"></span></div>
+          <div class="b-16"><span id="B-16"></span></div>
+          <div class="b-17"><span id="B-17"></span></div>
+          <div class="b-18"><span id="B-18"></span></div>
+          <div class="b-19"><span id="B-19"></span></div>
+          <div class="b-20"><span id="B-20"></span></div>
+        </div>
+        <!-- /* C */ -->
+        <div>
+          <div class="c-1"><span id="C-1"></span></div>
+          <div class="c-2"><span id="C-2"></span></div>
+          <div class="c-3"><span id="C-3"></span></div>
+          <div class="c-4"><span id="C-4"></span></div>
+          <div class="c-5"><span id="C-5"></span></div>
+          <div class="c-6 johto-route-38-area"><span id="C-6"></span></div>
+          <div class="c-7"><span id="C-7"></span></div>
+          <div class="c-8"><span id="C-8"></span></div>
+          <div class="c-9 ecruteak-city-area bell-tower"><span id="C-9"></span></div>
+          <div class="c-10"><span id="C-10"></span></div>
+          <div class="c-11 johto-route-42-area"><span id="C-11"></span></div>
+          <div class="c-12 mt-mortar"><span id="C-12"></span></div>
+          <div class="c-13"><span id="C-13"></span></div>
+          <div class="c-14"><span id="C-14"></span></div>
+          <div class="c-15 mahogany-town-area"><span id="C-15"></span></div>
+          <div class="c-16 johto-route-44-area"><span id="C-16"></span></div>
+          <div class="c-17 ice-path"><span id="C-17"></span></div>
+          <div class="c-18 blackthorn-city-area dragons-den"><span id="C-18"></span></div>
+          <div class="c-19"><span id="C-19"></span></div>
+          <div class="c-20"><span id="C-20"></span></div>
+        </div>
+        <!-- /* D */ -->
+        <div>
+          <div class="d-1"><span id="D-1"></span></div>
+          <div class="d-2"><span id="D-2"></span></div>
+          <div class="d-3"><span id="D-3"></span></div>
+          <div class="d-4 johto-route-39-area"><span id="D-4"></span></div>
+          <div class="d-5"><span id="D-5"></span></div>
+          <div class="d-6"><span id="D-6"></span></div>
+          <div class="d-7"><span id="D-7"></span></div>
+          <div class="d-8"><span id="D-8"></span></div>
+          <div class="d-9 johto-route-37-area"><span id="D-9"></span></div>
+          <div class="d-10"><span id="D-10"></span></div>
+          <div class="d-11"><span id="D-11"></span></div>
+          <div class="d-12"><span id="D-12"></span></div>
+          <div class="d-13"><span id="D-13"></span></div>
+          <div class="d-14"><span id="D-14"></span></div>
+          <div class="d-15"><span id="D-15"></span></div>
+          <div class="d-16"><span id="D-16"></span></div>
+          <div class="d-17"><span id="D-17"></span></div>
+          <div class="d-18"><span id="D-18"></span></div>
+          <div class="d-19"><span id="D-19"></span></div>
+          <div class="d-20"><span id="D-20"></span></div>
+        </div>
+        <!-- /* E */ -->
+        <div>
+          <div class="e-1"><span id="E-1"></span></div>
+          <div class="e-2 battle-frontier"><span id="E-2"></span></div>
+          <div class="e-3"><span id="E-3"></span></div>
+          <div class="e-4 olivine-city-area"><span id="E-4"></span></div>
+          <div class="e-5"><span id="E-5"></span></div>
+          <div class="e-6"><span id="E-6"></span></div>
+          <div class="e-7 national-park-area"><span id="E-7"></span></div>
+          <div class="e-8"><span id="E-8"></span></div>
+          <div class="e-9"><span id="E-9"></span></div>
+          <div class="e-10 johto-route-36-area"><span id="E-10"></span></div>
+          <div class="e-11"><span id="E-11"></span></div>
+          <div class="e-12 violet-city-area"><span id="E-12"></span></div>
+          <div class="e-13"><span id="E-13"></span></div>
+          <div class="e-14 johto-route-31-area"><span id="E-14"></span></div>
+          <div class="e-15"><span id="E-15"></span></div>
+          <div class="e-16"><span id="E-16"></span></div>
+          <div class="e-17"><span id="E-17"></span></div>
+          <div class="e-18 johto-route-45-area"><span id="E-18"></span></div>
+          <div class="e-19"><span id="E-19"></span></div>
+          <div class="e-20"><span id="E-20"></span></div>
+        </div>
+        <!-- /* F */ -->
+        <div>
+          <div class="f-1"><span id="F-1"></span></div>
+          <div class="f-2"><span id="F-2"></span></div>
+          <div class="f-3"><span id="F-3"></span></div>
+          <div class="f-4"><span id="F-4"></span></div>
+          <div class="f-5"><span id="F-5"></span></div>
+          <div class="f-6"><span id="F-6"></span></div>
+          <div class="f-7"><span id="F-7"></span></div>
+          <div class="f-8"><span id="F-8"></span></div>
+          <div class="f-9"><span id="F-9"></span></div>
+          <div class="f-10"><span id="F-10"></span></div>
+          <div class="f-11"><span id="F-11"></span></div>
+          <div class="f-12"><span id="F-12"></span></div>
+          <div class="f-13"><span id="F-13"></span></div>
+          <div class="f-14"><span id="F-14"></span></div>
+          <div class="f-15"><span id="F-15"></span></div>
+          <div class="f-16 dark-cave"><span id="F-16"></span></div>
+          <div class="f-17"><span id="F-17"></span></div>
+          <div class="f-18"><span id="F-18"></span></div>
+          <div class="f-19"><span id="F-19"></span></div>
+          <div class="f-20 mt-silver"><span id="F-20"></span></div>
+        </div>
+        <!-- /* G */ -->
+        <div>
+          <div class="g-1"><span id="G-1"></span></div>
+          <div class="g-2 johto-sea-route-40-area"><span id="G-2"></span></div>
+          <div class="g-3"><span id="G-3"></span></div>
+          <div class="g-4"><span id="G-4"></span></div>
+          <div class="g-5"><span id="G-5"></span></div>
+          <div class="g-6"><span id="G-6"></span></div>
+          <div class="g-7 johto-route-35-area"><span id="G-7"></span></div>
+          <div class="g-8"><span id="G-8"></span></div>
+          <div class="g-9"><span id="G-9"></span></div>
+          <div class="g-10"><span id="G-10"></span></div>
+          <div class="g-11 ruins-of-alph-outside ruins-of-alph-interior ruins-of-alph"><span id="G-11"></span></div>
+          <div class="g-12"><span id="G-12"></span></div>
+          <div class="g-13"><span id="G-13"></span></div>
+          <div class="g-14 johto-route-30-area"><span id="G-14"></span></div>
+          <div class="g-15"><span id="G-15"></span></div>
+          <div class="g-16"><span id="G-16"></span></div>
+          <div class="g-17"><span id="G-17"></span></div>
+          <div class="g-18"><span id="G-18"></span></div>
+          <div class="g-19"><span id="G-19"></span></div>
+          <div class="g-20"><span id="G-20"></span></div>
+        </div>
+        <!-- /* H */ -->
+        <div>
+          <div class="h-1"><span id="H-1"></span></div>
+          <div class="h-2 whirl-islands"><span id="H-2"></span></div>
+          <div class="h-3"><span id="H-3"></span></div>
+          <div class="h-4"><span id="H-4"></span></div>
+          <div class="h-5"><span id="H-5"></span></div>
+          <div class="h-6"><span id="H-6"></span></div>
+          <div class="h-7" ><span id="H-7"></span></div>
+          <div class="h-8"><span id="H-8"></span></div>
+          <div class="h-9"><span id="H-9"></span></div>
+          <div class="h-10"><span id="H-10"></span></div>
+          <div class="h-11"><span id="H-11"></span></div>
+          <div class="h-12"><span id="H-12"></span></div>
+          <div class="h-13"><span id="H-13"></span></div>
+          <div class="h-14"><span id="H-14"></span></div>
+          <div class="h-15"><span id="H-15"></span></div>
+          <div class="h-16"><span id="H-16"></span></div>
+          <div class="h-17 johto-route-46-area "><span id="H-17"></span></div>
+          <div class="h-18"><span id="H-18"></span></div>
+          <div class="h-19"><span id="H-19"></span></div>
+          <div class="h-20"><span id="H-20"></span></div>
+        </div>
+        <!-- /* I */ -->
+        <div>
+          <div class="i-1"><span id="I-1"></span></div>
+          <div class="i-2 johto-sea-route-41-area"><span id="I-2"></span></div>
+          <div class="i-3"><span id="I-3"></span></div>
+          <div class="i-4"><span id="I-4"></span></div>
+          <div class="i-5"><span id="I-5"></span></div>
+          <div class="i-6"><span id="I-6"></span></div>
+          <div class="i-7   goldenroad-city-area"><span id="I-7"></span></div>
+          <div class="i-8"><span id="I-8"></span></div>
+          <div class="i-9"><span id="I-9"></span></div>
+          <div class="i-10"><span id="I-10"></span></div>
+          <div class="i-11"><span id="I-11"></span></div>
+          <div class="i-12 johto-route-32-area"><span id="I-12"></span></div>
+          <div class="i-13"><span id="I-13"></span></div>
+          <div class="i-14"><span id="I-14"></span></div>
+          <div class="i-15"><span id="I-15"></span></div>
+          <div class="i-16"><span id="I-16"></span></div>
+          <div class="i-17"><span id="I-17"></span></div>
+          <div class="i-18"><span id="I-18"></span></div>
+          <div class="i-19"><span id="I-19"></span></div>
+          <div class="i-20"><span id="I-20"></span></div>
+        </div>
+        <!-- /* J */ -->
+        <div>
+          <div class="j-1 cianwood-city"><span id="J-1"></span></div>
+          <div class="j-2"><span id="J-2"></span></div>
+          <div class="j-3"><span id="J-3"></span></div>
+          <div class="j-4"><span id="J-4"></span></div>
+          <div class="j-5"><span id="J-5"></span></div>
+          <div class="j-6"><span id="J-6"></span></div>
+          <div class="j-7"><span id="J-7"></span></div>
+          <div class="j-8"><span id="J-8"></span></div>
+          <div class="j-9"><span id="J-9"></span></div>
+          <div class="j-10"><span id="J-10"></span></div>
+          <div class="j-11"><span id="J-11"></span></div>
+          <div class="j-12"><span id="J-12"></span></div>
+          <div class="j-13"><span id="J-13"></span></div>
+          <div class="j-14 cherrygrove-city-area"><span id="J-14"></span></div>
+          <div class="j-15"><span id="J-15"></span></div>
+          <div class="j-16"><span id="J-16"></span></div>
+          <div class="j-17 johto-route-29-area"><span id="J-17"></span></div>
+          <div class="j-18"><span id="J-18"></span></div>
+          <div class="j-19"><span id="J-19"></span></div>
+          <div class="j-20 new-bark-town-area"><span id="J-20"></span></div>
+        </div>
+        <!-- /* K */ -->
+        <div>
+          <div class="k-1"><span id="K-1"></span></div>
+          <div class="k-2"><span id="K-2"></span></div>
+          <div class="k-3"><span id="K-3"></span></div>
+          <div class="k-4"><span id="K-4"></span></div>
+          <div class="k-5"><span id="K-5"></span></div>
+          <div class="k-6"><span id="K-6"></span></div>
+          <div class="k-7 johto-route-34-area"><span id="K-7"></span></div>
+          <div class="k-8"><span id="K-8"></span></div>
+          <div class="k-9"><span id="K-9"></span></div>
+          <div class="k-10"><span id="K-10"></span></div>
+          <div class="k-11"><span id="K-11"></span></div>
+          <div class="k-12"><span id="K-12"></span></div>
+          <div class="k-13"><span id="K-13"></span></div>
+          <div class="k-14"><span id="K-14"></span></div>
+          <div class="k-15"><span id="K-15"></span></div>
+          <div class="k-16"><span id="K-16"></span></div>
+          <div class="k-17"><span id="K-17"></span></div>
+          <div class="k-18"><span id="K-18"></span></div>
+          <div class="k-19"><span id="K-19"></span></div>
+          <div class="k-20"><span id="K-20"></span></div>
+        </div>
+        <!-- /* L */ -->
+        <div>
+          <div class="l-1"><span id="L-1"></span></div>
+          <div class="l-2"><span id="L-2"></span></div>
+          <div class="l-3"><span id="L-3"></span></div>
+          <div class="l-4"><span id="L-4"></span></div>
+          <div class="l-5"><span id="L-5"></span></div>
+          <div class="l-6"><span id="L-6"></span></div>
+          <div class="l-7 ilex-forest-area"><span id="L-7"></span></div>
+          <div class="l-8"><span id="L-8"></span></div>
+          <div class="l-9"><span id="L-9"></span></div>
+          <div class="l-10"><span id="L-10"></span></div>
+          <div class="l-11"><span id="L-11"></span></div>
+          <div class="l-12"><span id="L-12"></span></div>
+          <div class="l-13"><span id="L-13"></span></div>
+          <div class="l-14"><span id="L-14"></span></div>
+          <div class="l-15"><span id="L-15"></span></div>
+          <div class="l-16"><span id="L-16"></span></div>
+          <div class="l-17"><span id="L-17"></span></div>
+          <div class="l-18"><span id="L-18"></span></div>
+          <div class="l-19"><span id="L-19"></span></div>
+          <div class="l-20"><span id="L-20"></span></div>
+        </div>
+        <!-- /* M */ -->
+        <div>
+          <div class="m-1"><span id="M-1"></span></div>
+          <div class="m-2"><span id="M-2"></span></div>
+          <div class="m-3"><span id="M-3"></span></div>
+          <div class="m-4"><span id="M-4"></span></div>
+          <div class="m-5"><span id="M-5"></span></div>
+          <div class="m-6"><span id="M-6"></span></div>
+          <div class="m-7"><span id="M-7"></span></div>
+          <div class="m-8"><span id="M-8"></span></div>
+          <div class="m-9 azalea-town-area"><span id="M-9"></span></div>
+          <div class="m-10 johto-route-33-area"><span id="M-10"></span></div>
+          <div class="m-11"><span id="M-11"></span></div>
+          <div class="m-12 union-cave"><span id="M-12"></span></div>
+          <div class="m-13"><span id="M-13"></span></div>
+          <div class="m-14"><span id="M-14"></span></div>
+          <div class="m-15"><span id="M-15"></span></div>
+          <div class="m-16"><span id="M-16"></span></div>
+          <div class="m-17"><span id="M-17"></span></div>
+          <div class="m-18"><span id="M-18"></span></div>
+          <div class="m-19"><span id="M-19"></span></div>
+          <div class="m-20"><span id="M-20"></span></div>
+        </div>
+
       </section>
     </main>
     <footer></footer>
