--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pokédex Generation 1</title>
+    <title>Pokédex Generation 1&2</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
@@ -17,13 +17,11 @@
 
     <main>
       <div class="container">
-        <h1>Pokemon Kanto region 1-151</h1>
+        <h1>Kanto & Johto 251 Pokémon</h1>
         <label for="search" hidden></label>
         <input type="search" name="search" id="search" placeholder="search for pokemon..." />
         <div id="pokelist"></div>
       </div>
-
-      
     </main>
 
     <footer>
